# api/docs/swagger.json
@@ -1518,7 +1518,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.ChatResponse"
+                            "$ref": "#/definitions/post.ChatResponse"
                         }
                     },
                     "400": {
@@ -1561,7 +1561,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateMassage"
+                            "$ref": "#/definitions/post.CreateMassage"
                         }
                     }
                 ],
@@ -1569,7 +1569,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.MassageResponse"
+                            "$ref": "#/definitions/post.MassageResponse"
                         }
                     },
                     "400": {
@@ -1707,7 +1707,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MassageResponseList"
+                            "$ref": "#/definitions/post.MassageResponseList"
                         }
                     },
                     "400": {
@@ -1753,7 +1753,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MassageResponseList"
+                            "$ref": "#/definitions/post.MassageResponseList"
                         }
                     },
                     "400": {
@@ -1790,7 +1790,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ChatResponseList"
+                            "$ref": "#/definitions/post.ChatResponseList"
                         }
                     },
                     "400": {
@@ -1847,7 +1847,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MassageResponseList"
+                            "$ref": "#/definitions/post.MassageResponseList"
                         }
                     },
                     "400": {
@@ -1890,7 +1890,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.MassageTrue"
+                            "$ref": "#/definitions/post.MassageTrue"
                         }
                     }
                 ],
@@ -1941,7 +1941,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UpdateMs"
+                            "$ref": "#/definitions/post.UpdateMs"
                         }
                     }
                 ],
@@ -1949,7 +1949,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MassageResponse"
+                            "$ref": "#/definitions/post.MassageResponse"
                         }
                     },
                     "400": {
@@ -2088,7 +2088,7 @@
                     },
                     {
                         "type": "integer",
-                        "name": "offset",
+                        "name": "page",
                         "in": "query"
                     }
                 ],
@@ -2324,7 +2324,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.CommentResponse"
+                            "$ref": "#/definitions/post.CommentResponse"
                         }
                     },
                     "400": {
@@ -2844,7 +2844,7 @@
                     },
                     {
                         "type": "integer",
-                        "name": "offset",
+                        "name": "page",
                         "in": "query"
                     }
                 ],
@@ -5031,34 +5031,6 @@
                 }
             }
         },
-        "models.ChatResponse": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string",
-                    "default": "2023-01-01T00:00:00Z"
-                },
-                "id": {
-                    "type": "string",
-                    "default": "0"
-                },
-                "user2_id": {
-                    "type": "string",
-                    "default": "0"
-                }
-            }
-        },
-        "models.ChatResponseList": {
-            "type": "object",
-            "properties": {
-                "chat": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.ChatResponse"
-                    }
-                }
-            }
-        },
         "models.CommentPost": {
             "type": "object",
             "properties": {
@@ -5167,27 +5139,6 @@
                 },
                 "name": {
                     "type": "string"
-                }
-            }
-        },
-        "models.CreateMassage": {
-            "type": "object",
-            "properties": {
-                "chat_id": {
-                    "type": "string",
-                    "default": "0"
-                },
-                "content": {
-                    "type": "string",
-                    "default": "Hello"
-                },
-                "content_type": {
-                    "type": "string",
-                    "default": "text"
-                },
-                "sender_id": {
-                    "type": "string",
-                    "default": "0"
                 }
             }
         },
@@ -5422,63 +5373,6 @@
                 "username": {
                     "type": "string",
                     "default": "tom0011"
-                }
-            }
-        },
-        "models.MassageResponse": {
-            "type": "object",
-            "properties": {
-                "chat_id": {
-                    "type": "string",
-                    "default": "0"
-                },
-                "content": {
-                    "type": "string",
-                    "default": "Hello"
-                },
-                "content_type": {
-                    "type": "string",
-                    "default": "text"
-                },
-                "created_at": {
-                    "type": "string",
-                    "default": "2023-01-01T00:00:00Z"
-                },
-                "id": {
-                    "type": "string",
-                    "default": "0"
-                },
-                "is_read": {
-                    "type": "boolean",
-                    "default": false
-                },
-                "sender_id": {
-                    "type": "string",
-                    "default": "0"
-                },
-                "updated_at": {
-                    "type": "string",
-                    "default": "2023-01-01T00:00:00Z"
-                }
-            }
-        },
-        "models.MassageResponseList": {
-            "type": "object",
-            "properties": {
-                "massage": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.MassageResponse"
-                    }
-                }
-            }
-        },
-        "models.MassageTrue": {
-            "type": "object",
-            "properties": {
-                "chat_id": {
-                    "type": "string",
-                    "default": "0"
                 }
             }
         },
@@ -5739,19 +5633,6 @@
                 }
             }
         },
-        "models.UpdateMs": {
-            "type": "object",
-            "properties": {
-                "message_id": {
-                    "type": "string",
-                    "default": "123456"
-                },
-                "text": {
-                    "type": "string",
-                    "default": "Hello"
-                }
-            }
-        },
         "models.UpdateNationalFood": {
             "type": "object",
             "properties": {
@@ -5990,6 +5871,133 @@
                     "type": "string"
                 },
                 "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "post.ChatResponse": {
+            "type": "object",
+            "properties": {
+                "crated_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "user1_id": {
+                    "type": "string"
+                },
+                "user2_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "post.ChatResponseList": {
+            "type": "object",
+            "properties": {
+                "chat": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/post.ChatResponse"
+                    }
+                }
+            }
+        },
+        "post.CommentResponse": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "post_id": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "post.CreateMassage": {
+            "type": "object",
+            "properties": {
+                "chat_id": {
+                    "type": "string"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "content_type": {
+                    "type": "string"
+                },
+                "sender_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "post.MassageResponse": {
+            "type": "object",
+            "properties": {
+                "chat_id": {
+                    "type": "string"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "content_type": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "is_read": {
+                    "type": "boolean"
+                },
+                "sender_id": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "post.MassageResponseList": {
+            "type": "object",
+            "properties": {
+                "massage": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/post.MassageResponse"
+                    }
+                }
+            }
+        },
+        "post.MassageTrue": {
+            "type": "object",
+            "properties": {
+                "chat_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "post.UpdateMs": {
+            "type": "object",
+            "properties": {
+                "message_id": {
+                    "type": "string"
+                },
+                "text": {
                     "type": "string"
                 }
             }
